Don't use --warnings-as-errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,8 +88,10 @@ jobs:
 
     # Step: Compile the project treating any warnings as errors.
     # Customize this step if a different behavior is desired.
-    - name: Compiles without warnings
-      run: mix compile --warnings-as-errors
+    # Disabled for now because certain compiler warnings are expected
+    # to validate some configurations.
+    # - name: Compiles without warnings
+    #   run: mix compile --warnings-as-errors
 
     # Step: Check that the checked in code has already been formatted.
     # This step fails if something was found unformatted.
