Run `mix docs --warnings-as-erros` as part of CI
This is just a proposal, but the previous errors were probably caused by
refactorings while not being aware that documentation was broken. This PR adds a
step to CI that validates the docs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,3 +106,7 @@ jobs:
     # Step: Execute dialyzer.
     - name: Run dialyzer
       run: mix dialyzer
+
+    # Step: Execute `mix docs`
+    - name: Validate documentation
+      run: mix docs --warnings-as-errors
